--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,24 +107,37 @@
         android:id="@+id/btnPlusCoffee"
         android:layout_width="55dp"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp"
+        android:layout_below="@id/ivCoffee"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="22sp" />
+
+    <Button
+        android:id="@+id/btnPlusCoffeeBig"
+        android:layout_width="wrap_content"
+        android:layout_height="71dp"
+        android:layout_below="@id/ivCoffee"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:text="+"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="22sp"
-        android:layout_below="@id/ivCoffee"/>
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/tvCoffeesDrank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="36sp"
         android:layout_below="@id/ivCoffee"
-        android:layout_toRightOf="@id/btnPlusCoffee"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/btnPlusCoffee"
+        android:text="0"
+        android:textSize="36sp" />
 
 
 </RelativeLayout>
